--- a/index.html
+++ b/index.html
@@ -548,6 +548,7 @@
                                         <td id="DemonGuide-Psychic"> <b>Psychic </b></td>
                                         <td> <b>Mana Gain</b>/Bonus is sadly a bad skill in general, there isn't really
                                             any reason to save up to 12 mp.
+                                        </td>
                                         <td>Bad</td>
                                     </tr>
                                     <tr>
@@ -614,6 +615,7 @@
                                         <td id="DemonGuide-Psychic"><b>Psychic</b></td>
                                         <td>Nothing else really beats <b>Butcher</b>. It is the only way to increase
                                             his sweeping damage due to Morning Star/Megidolaon being almighty.
+                                        </td>
                                         <td><b>Best</b></td>
                                     </tr>
                                     <tr>
@@ -622,8 +624,8 @@
                                             Butcher skill genome. It covers his weakness allowing him to be healed
                                             instead (You'd want to cover his weakness anyways and so Resist Light would
                                             work regardless).
-                                            <p> Personally if i ever got Butcher, i'd transfer it to another demon and
-                                                have him as Purple. </p>
+                                            <br> Personally if i ever got Butcher, i'd transfer it to another demon and
+                                                have him as Purple.
                                         </td>
                                         <td>Usable</td>
                                     </tr>
@@ -671,30 +673,56 @@
                 -->
 
                 <b-card>
-                    <p><strong><a id="Vishnu" href="javascript:void(0)" @click="show_guide_devil('Vishnu')">Vishnu</a></strong></p>
-                    <p>Strong slow caster with the unique passive Avatar. This acts as Enduring Soul + Life Aid
-                        combined into one (500 HP, 50% per wave. It's also levellable). You can choose to also
-                        build
-                        him as a support as yellow or if you wish, go with Red for offensive usage.</p>
+                    <p><strong><a id="Vishnu" href="javascript:void(0)" @click="show_guide_devil('Vishnu')">[Vishnu]</a></strong></p>
+                    <p>A Strong slow caster with the unique passive Avatar. This acts as an improved Enduring Soul + Life Aid
+                       combined into one (500 HP, 50% per wave. It's also levellable). He naturally also nulls light/dark and with his low agi 
+                       and survival, he can be used in slower pvp teams + pve content such as Sloth 10, Aether farming.
+                       </p>
                     <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Red (Megidolaon). -1 MP goes a long way for this, being the strongest obtainable
-                            sweeping
-                            almighty skill in the game</li>
-                        <li>Yellow (War Dance). Lands him more in a defensive role, with a 5mp cost Rakukaja and
-                            Tarukaja bundled into one. Avatar would ensure he stays alive, whilst War Dance would
-                            give
-                            make your team takes less damage and do more in return.</li>
-                    </ul>
+                    
+                    <div id="DemonGuideTable">
+                      <p><table>
+                        <tbody>
+                          <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                              <td><b>Mudodyne</b> is a good skill on him. It gives him more coverage so that he now has Ice, Light and Dark</td>
+                              <td>Usable</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                              <td><b>Megidolaon</b> is the strongest obtainable almighty sweeping skill in the game.
+                                  -1 MP goes a long way for this. Given his high magic, he'd also hit very hard with it. 
+                              </td>
+                              <td><b>Best</b></td>
+                          </tr>
+                          <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                              <td>Landing him a more defensive role, <b>War Dance</b> grants your team a 5mp cost Rakukaja + Tarukaja.
+                                  <br> Avatar would ensure he stays alive and War Dance would make your team take less damage and deal more.
+                              </td>
+                              <td>Usable</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                              <td><b>Null Mute</b> doesn't help him much, it will prevent his skills from being locked from mute. But when he's
+                              inflicted, you could always keep passing until its gone or just cure it (Mute isn't as dangerous as Charm/Bind)</td>
+                              <td>Bad</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                              <td>As he naturally nulls dark, <b>Repel Dark</b> doesn't add much. It's an upgrade sure, but the only main 
+                              use it has is if you pair him with Alilat (it'll prevent him from being swept by Black Frost's: Go To Hell!).
+                              </td>
+                              <td>Bad</td>
+                          </tr>
+                        </tbody>
+                      </table></p>
+                    </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
-                        <li>Resist Fire.</li>
-                        <li>Endure/Enduring Soul. You can even opt not to get Resist Fire and get these two, he'd
-                            essentially survive 3 extra hits. Though that means enemies would focus fire on
-                            him.</li>
+                        <li>Resist Fire. Covering weakness is always nice</li>
+                        <li>Endure/Enduring Soul. If you get these two together, he'd essentially survive 3 extra hits. 
+                            Though that means enemies would focus fire fire on him.
+                        </li>
                     </ul>
-                    <p><strong>Brands:</strong> Divine Type for spellcaster Support Type for well support.</p>
+                    <p><strong>Brands:</strong> Divine for Aragami, Life/Spell works for Protector </p>
                 </b-card>
+                
                 <b-card>
                     <p><strong><a id="Yoshitsune" href="javascript:void(0)" @click="show_guide_devil('Yoshitsune')">Yoshitsune</a></strong></p>
                     <p>He is immune to light and dark, resistant to phys attacks, has high strength, good agility
