Izanami, Alice, Huang Di Guide Update

--- a/index.html
+++ b/index.html
@@ -1127,25 +1127,37 @@
                         comes with Bolt Storm and Merciless blow meaning if you face a elec weak demon they'd get
                         fried
                         to a crisp.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>All of her Archetypes are pretty good i'd say, the only one that's iffy to me is
-                            Teal(Repel
-                            Ice). Since she already nulls ice, the only use this will get is pairing her up with
-                            Alilat
-                            to ignore ice pierce. Though the only situation that this will be useful is if you face
-                            a
-                            Purple Rama which would be quite rare anyways.</li>
-                        <li>Clear (Life Surge). You can increase her tankiness with this, though this'll be the
-                            hardest
-                            to get unless you're really luck with hell buns or have tons of mag to fuse clear 5*
-                            demons.</li>
-                        <li>Red (Hell Gaze). Goes well with her unique passive and is quite powerful too, 180 power
-                            will hit hard.</li>
-                        <li>Yellow (Concentrate). Enables you to turn her into a sweeper if you like. Though if you
-                            want to cover her weakness you'd only be able to pick one additional skill.</li>
-                        <li>Purple (Elec Amp). Boosts her elec damage even further.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td><b>Life Surge</b> increases her tankiness, though this'll be the
+                                            hardest
+                                            to get unless you're really luck with hell buns or have tons of mag to fuse clear 5*
+                                            demons.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td><b>Hell Gaze</b> goes well with her unique passive and is quite powerful too, 180 power
+                                            will hit hard.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Concentrate</b> enables you to turn her into a sweeper if you like. Though if you
+                                            want to cover her weakness you'd only be able to pick one additional skill.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td><b>Elec Amp</b> boosts her elec damage even further</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Repel Ice</b></td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Fire. Weakness should be covered</li>
@@ -1165,21 +1177,37 @@
                         one use only). Yup, she can kill anyone she points her finger at (provided they aren't
                         immune to dark/boss as they are immune). She's really good for shutting down dangerous
                         opponents and can hit hard provided no dark immunity as that's all her base kit relies on.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Yellow gives her a unique skill (Necro Dogma + Epic Recovery), though given its cost
-                            (9mp -&gt; 8) and effect (Almighty damage 100 to all enemies + Rakukaja), it isn't that
-                            good as its a weak Megidolaon. Epic Recovery is sadly meh (its a rare skill and she's
-                            the only source of it, in case you are interested in it). The main appeal with this
-                            Archetype is that is gives her more of a supportive role, also saving you from
-                            transferring Megido, so you can go with Resist Light + whatever you want. You'd want to
-                            run Divine in order to be able to 2 turn Necro Dogma.</li>
-                        <li>Purple (Dark Amp + Wild Instinct). Makes all of her dark skills hit even harder, Wild
-                            Instinct is pretty crappy i'd recommend removing it.</li>
-                        <li>Teal (Repel Light + Thunder Reign). Covers her light weakness and gives her an
-                            alternate source of attack. Thunder Reign is quite powerful so it'll capitalize on her
-                            high magic stat.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td><b></b><br><b></b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td><b>Hell Gaze</b><br><b>Glacial Blast</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Necro Dogma</b>, given its cost
+                                            (9mp -&gt; 8) and effect (Almighty damage 100 to all enemies + Rakukaja), isn't that
+                                            good as its a weak Megidolaon. <br><b>Epic Recovery</b> is sadly meh, but it is a rare skill.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td><b>Dark Amp</b> makes all her dark skills hit harder<br>
+                                            <b>Wild Instinct</b> is pretty crappy, I'd recommend removing it.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Repel Light</b> covers her light weakness.<br><b>Thunder Reign</b> gives her an
+                                            alternate source of attack. Thunder Reign is quite powerful so it'll capitalize on her
+                                            high magic stat.</td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Light (If not Teal) she should have her weakness covered.</li>
@@ -1198,28 +1226,40 @@
                         crit with 150 power. With that skillset he's quite devastating in any content and this is
                         probably why (him + Hell Biker + Zaou Gongen), you see a lot of anti-phys defense teams in
                         pvp.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>All are good due to him having amazing gacha skills. If you wanted to archetype change
-                            with him though, then either go with Purple for Null Charm (Pvp as charm is widely
-                            used) or Teal for Repel Light (Covers for Hecatoncheires' Light weakness when facing
-                            light sweeping demons like Mastema). So i'll just go over each archetype and why it
-                            works</li>
-                        <li>Red (Berserker God + Auto-Taruka). Auto taruka is what makes this really nice, saves
-                            you using another demon with it though if you have Ananta this archetype isn't that
-                            good. Berserker God is good at taking out single targets but his main use is in
-                            sweeping anyhows</li>
-                        <li>Yellow (Salvation + Null Phys). Salvation is not that good on him as he is not a
-                            caster, Null Phys is what makes this pulled archetype good (and is the only source of a
-                            Null resistance that is transferable). If his attack is repelled he won't die to the
-                            reflected damage so you can sweep teams using Alilat + repel phys.</li>
-                        <li>Purple (Null Charm + Serial Killer). Immunity to charm is amazing in pvp as mentioned
-                            before (so you won't sweep your own kill). Having Serial Killer will boost his aoe
-                            damage even further.</li>
-                        <li>Teal (Repel Light + Infernal Mask). Immunity to light also means you can't be one
-                            shotted by God's Bow, whilst Infernal Mask ensures he's unlikely to be hit by ailments
-                            in the first place.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td><b></b><br><b></b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td><b>Berserker God</b> is good at taking out single targets but his main use is in
+                                            sweeping anyhows.<br><b>Auto-Taruka</b> is what makes this really nice since it saves
+                                            you using another demon with it. If you have Ananta, this archetype isn't that
+                                            good.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Salvation</b> is not that good on him as he is not a
+                                            caster.<br><b>Null Phys</b> is what makes this pulled archetype good (and is the only source of a
+                                            Null resistance that is transferable). If his attack is repelled he won't die to the
+                                            reflected damage so you can sweep teams using Alilat + repel phys.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td><b>Null Charm</b> is amazing in pvp.<br><b>Serial Killer</b> will boost his aoe
+                                            damage even further.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Repel Light</b> means you can't be one
+                                            shotted by God's Bow.<br><b>Infernal mask</b> ensures he's unlikely to be hit by ailments.</td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Phys Boost. Damage up, sweeping all day and all night</li>
