Demon Guide: Updated Mother Harlot
Added more recommended skills

--- a/index.html
+++ b/index.html
@@ -819,8 +819,8 @@
                                 <td><b>Best (Offensive)</b></td>
                             </tr>
                             <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
-                                <td><b>Drain Phys</b> is useful when you have Rama with you (since she has Drain Elec as well), stopping piercing phys hitters and Thor from from sweeping you.
-                                  <br> Naturally she has Null Phys anyways so prevents phys aoe in general. 
+                                <td><b>Drain Phys</b> is most useful <b>when</b> you have Rama with you (since she has Drain Elec as well), stopping piercing phys hitters and Thor from from sweeping you.
+                                  <br> Naturally she has Null Phys anyways and so prevents phys aoe in general. 
                                     <b>Makara Shift</b> is nice defensively for when you start second in pvp. 
                                 </td>
                                 <td><b>Best (Defensive)</b></td>
@@ -832,9 +832,10 @@
                     <ul>
                         <li>Resist Force. She has a weakness that should be covered.</li>
                         <li>Mahamarin Karin. Though i think it'd be better to have another demon charmed and have
-                            her
-                            focused at spamming Babylon Goblet such as Alilat, I have a guildie that runs this that
-                            does really well in pvp. Given her high luck she'd likely inflict it easily.</li>
+                            her focused at spamming Babylon Goblet such as Alilat (I have a guildie that runs this and
+                            does really well in pvp). Given her high luck she'd likely inflict it easily.</li>
+                        <li>Serial Killer/Butcher. Increases her BG damage as it's almighty based </li>
+                        <li>Endure. Gives her survivability.
                     </ul>
                     <p><strong>Brands:</strong> Divine to spam Babylon Goblet. Some of the top players use Life to
                         ensure she stays alive as long as possible. Spell if you want Babylon Goblet to do more
