--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
                             </tr>
                             <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
                                 <td><b>Deathtouch</b> gives her a single target skill. Be wary though as if you don't use Divine brands, she'd use this over BG.
-                                <br><b>Tetra Shift</b> helps when starting second, it prevents phys attacks though isn't as good as it used to be due to the prevalent use of pierce</td>
+                                <br><b>Tetraka Shift</b> helps when starting second, it prevents phys attacks though isn't as good as it used to be due to the prevalent use of pierce</td>
                                 <td>Usable</td>
                             </tr>
                             <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
@@ -1844,7 +1844,7 @@
                             be a dps (he has a meh magic stat anyways). Auto-Tarunda is a really good skill though, so
                             if you pulled him as Red, i'd recommend switching to another archetype, keeping
                             Auto-Tarunda.</li>
-                        <li>Purple can have its uses (Tetra Shift + Hell Gaze), it can stop first turn phys, giving you
+                        <li>Purple can have its uses (Tetraka Shift + Hell Gaze), it can stop first turn phys, giving you
                             one turn of breathing room, though in higher pvp people generally bring pierce phys demons
                             anyhows. Hell Gaze is pretty bad using the same reasoning as Mamudoon.</li>
                         <li>Yellow (Nocturne + Null Bind). Gives him another supporting skill to use to enhance your
