--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
                                         <td></td>
                                     </tr>
                                     <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
-                                        <td><b>Auto-Rakuga</b><br><b>Trisagion</b></td>
+                                        <td><b>Auto-Rakuka</b><br><b>Trisagion</b></td>
                                         <td></td>
                                     </tr>
                                     <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
@@ -986,7 +986,7 @@
                                     <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
                                         <td>With <b>Judgement</b> he can enhance his support skills with
                                             an aoe that does damage and grants the party tarukaja.
-                                            <br><b>Auto-Rakuga</b> is always nice to boost
+                                            <br><b>Auto-Rakuka</b> is always nice to boost
                                             up your defence without having to spend a turn casting Rakukaja. He's actually attack AI
                                             so sadly he won't take advantage of skills like Fog/Acid Breath and War Cry</td>
                                         <td></td>
@@ -1873,7 +1873,7 @@
                     <p>Speediest demon in the game and really squishy. He has high luck and magic meaning he's built
                         for evasion and turn one kill pvp teams. Repelling Fire and Nulling light means he'd be really
                         useful in Vanity 10 where the final boss there is Quetzacoatl with Mazandyne and Maragidyne.
-                        Naturally he also comes with Auto-Rakuna and Vanaha (+15% evasion, +30% ailment resistance)
+                        Naturally he also comes with Auto-Rakunda and Vanaha (+15% evasion, +30% ailment resistance)
                         further solidifying those points before. Given the ailment resistance boost he'd have low
                         chances of being affected by ailments. Garuda in pvp can be used to help face against Hell
                         Biker defense teams, with the highest agility in game + the bonus to evasion, he should be able
